--- a/test/fixtures/newsletters.yml
+++ b/test/fixtures/newsletters.yml
@@ -1,11 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
+  name: MyString
   description: MyText
   link: MyString
+  country: MyString
+  state: MyString
 
 two:
-  title: MyString
+  name: MyString
   description: MyText
   link: MyString
+  country: MyString
+  state: MyString
