--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,8 @@ default: &default
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: localhost
-  username: pguser
-  password: pass123
+  username: diego
+  password: 123
 
 development:
   <<: *default
