tudo dando certo mais eu to esperto não posso botar tudo a perder

--- a/config/database.yml
+++ b/config/database.yml
@@ -84,5 +84,5 @@ test:
 production:
   <<: *default
   database: sigeo_production
-  username: sigeo
-  password: <%= ENV['SIGEO_DATABASE_PASSWORD'] %>
+  username: diego
+  password: 123
