--- a/config/database.yml
+++ b/config/database.yml
@@ -20,9 +20,7 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: db
-  username: diego
-  password: 123
+ 
 
 development:
   <<: *default
@@ -84,5 +82,5 @@ test:
 production:
   <<: *default
   database: sigeo_production
-  username: diego
-  password: 123
+  username: sigeo
+  password: <%= ENV['SIGEO_DATABASE_PASSWORD'] %>
